--- a/lvl1/Project 2/style.css
+++ b/lvl1/Project 2/style.css
@@ -10,12 +10,19 @@ html, body{
     width: 100%;
 }
 
+#main{
+    height: 100%;
+    width: 100%;
+}
+
 #nav{
     display: flex;
     align-items: center;
     justify-content: flex-end;
     padding: 30px;
     gap: 10px;
+    position: fixed;
+    width: 100%;
 }
 
 #nav h4{
@@ -28,12 +35,12 @@ html, body{
 }
 
 #intro{
-    padding: 0px 60px;
+    padding: 50px 60px;
 }
 
 #intro h1{
     font-size: 150px;
-    letter-spacing: -10px;
+    letter-spacing: -9px;
     line-height: 150px;
     color: #2b2525;
 }
@@ -44,4 +51,56 @@ html, body{
     justify-content: space-between;
     margin-top: 20px;
     font-size: 28px;
+    /* margin-bottom: 5px; */
+}
+
+#hero-img{
+    height: 90%;
+    width: 100%;
+    background-image: url(https://assets-global.website-files.com/64589fb989b2b33c593db89d/6458a6db645ec6a527000cfa_home-hero-p-2000.webp);
+    background-size: cover;
+}
+
+#about{
+    height: 50%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 60px 63px;
+}
+
+#about h2{
+    font-size: 90px;
+    width: 65%;
+    line-height: 90px;
+    letter-spacing: -2px;
+    padding-right: 70px;
+    /* font-weight: 550; */
+}
+
+#about-me{
+    border-left: 2px solid #000;
+    height: 100%;
+    width: 35%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 0 70px;
+    font-size: 34px;
+}
+
+#smedia{
+    display: flex;
+    padding: 3px;
+    gap: 15px;
+}
+
+#smedia i{ 
+    background-color: #000;
+    color: #fff;
+    border-radius: 50px;
+    padding: 12px;
+    font-size: 25px;
 }
