--- a/lvl1/Project 2/style.css
+++ b/lvl1/Project 2/style.css
@@ -104,3 +104,80 @@ html, body{
     padding: 12px;
     font-size: 25px;
 }
+
+#work{
+    border-top: 2px solid #000;
+    margin: 0 60px;
+    height: 53%;
+    width: 94%;
+    padding: 62px 0;
+    display: flex;
+    border-bottom: 2px solid #000;
+}
+
+#work1{
+    height: 100%;
+    width: 34%;
+    padding-right: 60px;
+    font-size: 34px;
+    display: flex;
+    justify-content: space-between;
+    /* border-right: 2px solid #000; */
+}
+
+#work1 i{
+    font-size: 40px;
+}
+
+#work2{
+    width: 66%;
+    height: 100%;
+    border-left: 2px solid #000;
+    padding-left :70px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.wpart{
+    width: 100%;
+    height: 50%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.wpart:nth-child(1){
+    padding-bottom: 62px;
+}
+
+.wpart:nth-child(2){
+    border-top: 2px solid #000;
+    padding-top: 62px;
+}
+
+.wpart .wele{
+    width: 50%;
+    height: 100%;
+}
+
+.wele:nth-child(2){
+    border-left: 2px solid #000;
+    padding-left :60px;
+}
+
+.wele:nth-child(1){
+    padding-right :60px;
+}
+
+.wele h3{
+    font-size: 45px;
+    margin-bottom: 5px;
+    letter-spacing: -1px;
+}
+
+.wele p{
+    font-size: 19px;
+    color: #615858;
+    line-height: 30px;
+    letter-spacing: 0.5px;
+}
